fix: html script tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header container" >
-        <img id="img-min1" src="/minion1.png" />
+        <img id="img-min1" src="/images/minion1.png" />
         <h1>This is BANANAAAA!!!</h1>    
     </header>
     <div class="container"><p>Write the sentence you want to translate. Here 👇🏻
@@ -30,6 +30,7 @@
     </footer>
 
     
-    <script src="app.js" type="text/javascript" />
+    <script src="/app.js" type="text/javascript"></script>
+
 </body>
 </html>
